# praxis_management

./: angular.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bycript/: Cargo.toml
src-tauri/bycript/src/: lib.rs
src-tauri/src/: config_db.rs  main.rs  models.rs
src-tauri/src/controllers/: hardware.rs  inventory.rs  mod.rs  project.rs  responsibility.rs  responsive_letter.rs  software.rs  user.rs
src-tauri/src/models/: hardwares.rs  inventories.rs  mod.rs  projects.rs  responsibilities.rs  responsive_letters.rs  softwares.rs  user_model.rs  users.rs
src-tauri/src/responsibilities/: controllers.rs  models.rs
src-tauri/src/users/: controllers.rs  mod.rs  models.rs
src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
src/app/core/: core.module.ts
src/app/core/guards/: index.ts
src/app/core/guards/edit/: edit.guard.ts
src/app/core/guards/logged/: logged.guard.ts
src/app/core/guards/login/: login.guard.ts
src/app/core/interceptors/: index.ts
src/app/core/interceptors/http-token/: http-token.interceptor.ts
src/app/core/interceptors/location/: location.interceptor.spec.ts  location.interceptor.ts
src/app/core/models/: index.ts
src/app/core/services/auth/: auth.service.ts
src/app/core/services/user/: user.service.ts
src/app/pages/collection/: collection.component.spec.ts  collection.component.ts
src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
src/app/pages/login/models/: index.ts
src/app/pages/responsibilities/: responsibilities.component.spec.ts  responsibilities.component.ts
src/app/pages/responsive-letter/: responsive-letter.component.html  responsive-letter.component.spec.ts  responsive-letter.component.ts
src/app/shared/: shared.module.ts
src/app/shared/components/: index.ts
src/app/shared/components/confirm/: confirm.component.html  confirm.component.scss  confirm.component.ts
src/app/shared/directives/: index.ts
src/app/shared/pipes/: index.ts
src/app/shared/utils/: FormValidator.ts  index.ts
src/assets/scss/: _local_functions.scss  _local_mixins.scss  _local_variables.scss
(+16 files in other folders)
