[package]
name = "praxis_management"
version = "0.0.0"
description = "A Tauri App"
authors = ["Padrón Rocha"]
license = ""
repository = "https://github.com/PadRocha/praxis_management.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "dialog-ask", "notification-all", "fs-write-file", "dialog-open", "dialog-save", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.6.1", features = ["bson-chrono-0_4", "tokio-sync"] }
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
thiserror = "1.0.48"
pretty_env_logger = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
