[package]
name = "praxis_management"
version = "0.0.0"
description = "Praxis's application to manage"
authors = ["Joshua Elí Padrón Rocha <p.roch@outlook.es>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PadRocha/praxis_management.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "window-maximize",
  "path-all",
  "dialog-ask",
  "notification-all",
  "fs-write-file",
  "dialog-open",
  "dialog-save",
  "fs-read-file",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.6.1", features = ["tokio-sync"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
